overflow fix

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -100,10 +100,6 @@ li .card.small {
 	}
 }
 
-input[type=range]::-moz-focus-outer {
-	border: 0;
-}
-
 .range-field {
 	line-height: 15px;
 }
@@ -118,4 +114,11 @@ input[type=range]::-moz-focus-outer {
 
 li:hover .cog {
 	opacity: 1;
+}
+
+input[type=range]::-moz-focus-outer {
+	border: 0;
+}
+.modal {
+	overflow-x: hidden;
 }
